<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#E0E0E0">

    <!-- Back Button -->
    <Button
        android:id="@+id/button_admin_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="Back" />

    <!-- Tabs Layout -->
    <LinearLayout
        android:id="@+id/Admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_admin_back"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:id="@+id/manage_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_events"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_profile"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_image"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_qr_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_qr_code"
            android:textColor="#000000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/manage_facilities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:text="@string/manage_facilities"
            android:textColor="#000000"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view_flipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Admin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ViewFlipper
            android:id="@+id/admin_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Manage Events Layout -->
            <ScrollView
                android:id="@+id/Event_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Events -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- ListView to display events -->
                    <ListView
                        android:id="@+id/eventListView"
                        android:layout_width="match_parent"
                        android:layout_height="537dp"
                        android:background="#FFFFFF"

                        android:divider="@color/black"
                        android:dividerHeight="1dp"
                        android:textColor="#000000" />

                    <!-- Search Bar for filtering events -->


                </LinearLayout>
            </ScrollView>

            <!-- Manage Profile Layout -->
            <ScrollView
                android:id="@+id/profile_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Profile -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- ListView to display events -->
                    <ListView
                        android:id="@+id/ProfileListView"
                        android:layout_width="match_parent"
                        android:layout_height="537dp"
                        android:background="#FFFFFF"

                        android:divider="@color/black"
                        android:dividerHeight="1dp"
                        android:textColor="#000000" />

                    <!-- Search Bar for filtering events -->
                </LinearLayout>

            </ScrollView>

            <!-- Manage Image Layout -->
            <ScrollView
                android:id="@+id/image_detals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Image -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- ListView to display events -->
                    <ListView
                        android:id="@+id/ImageListView"
                        android:layout_width="match_parent"
                        android:layout_height="537dp"
                        android:background="#FFFFFF"

                        android:divider="@color/black"
                        android:dividerHeight="1dp"
                        android:textColor="#000000" />

                    <!-- Search Bar for filtering events -->
                </LinearLayout>
            </ScrollView>

            <!-- Manage QR Code Layout -->
            <ScrollView
                android:id="@+id/QRqoute_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage QR Code -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- ListView to display events -->
                    <ListView
                        android:id="@+id/QRcodeListView"
                        android:layout_width="match_parent"
                        android:layout_height="537dp"
                        android:background="#FFFFFF"

                        android:divider="@color/black"
                        android:dividerHeight="1dp"
                        android:textColor="#000000" />

                    <!-- Search Bar for filtering events -->
                </LinearLayout>
            </ScrollView>

            <!-- Manage Facilities Layout -->
            <ScrollView
                android:id="@+id/facilities_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <!-- Content for Manage Facilities -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- ListView to display events -->
                    <ListView
                        android:id="@+id/facilitiesListView"
                        android:layout_width="match_parent"
                        android:layout_height="537dp"
                        android:background="#FFFFFF"

                        android:divider="@color/black"
                        android:dividerHeight="1dp"
                        android:textColor="#000000" />

                    <!-- Search Bar for filtering events -->
                </LinearLayout>
            </ScrollView>

        </ViewFlipper>


    </LinearLayout>

    <!-- Tabs -->

</RelativeLayout>