<resources>
    <string name="app_name">PickMe_nebula0</string>
    <string name="user_info_header_first_time">Enter Your Info</string>
    <string name="user_info_header_returning">Update Your Info</string>
    <string name="user_info_require_field">* denotes a required field</string>
    <string name="user_info_notif_checkbox">I want to receive notifications from organizers and administrators</string>
    <string name="manage_events">Manage Events</string>
    <string name="manage_profile">Manage Profiles</string>
    <string name="manage_image">Manage Posters</string>
    <string name="manage_qr_code">Manage QR Codes</string>
    <string name="manage_facilities">Manage Facilities</string>
</resources>